[tool.poetry]
name = "wraps"
version = "0.13.0"
description = "Meaningful and safe wrapping types."
authors = ["nekitdev"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/nekitdev/wraps"
repository = "https://github.com/nekitdev/wraps"
documentation = "https://nekitdev.github.io/wraps"

keywords = ["python", "future", "either", "option", "result"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Chat = "https://nekit.dev/chat"
Funding = "https://nekit.dev/funding"
Issues = "https://github.com/nekitdev/wraps/issues"

[[tool.poetry.packages]]
include = "wraps"

[tool.poetry.dependencies]
python = ">= 3.8"

attrs = ">= 23.2.0"

funcs = ">= 0.10.1"
named = ">= 1.4.2"

typing-aliases = ">= 1.10.1"
typing-extensions = ">= 4.12.2"

[tool.poetry.group.format.dependencies]
ruff = "0.4.10"

[tool.poetry.group.check.dependencies]
mypy = "1.10.0"

[tool.poetry.group.check.dependencies.pre-commit]
version = "3.7.1"
python = ">= 3.9"

[tool.poetry.group.test.dependencies]
coverage = "7.5.3"
pytest = "8.2.2"
pytest-cov = "5.0.0"

[tool.poetry.group.test.dependencies.anyio]
version = "4.4.0"
extras = ["trio"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.6.0"
mkdocs-material = "9.5.27"

[tool.poetry.group.docs.dependencies.mkdocstrings]
version = "0.25.1"
extras = ["python"]

[tool.poetry.group.scripts]
optional = true

[tool.poetry.group.scripts.dependencies]
entrypoint = "2.1.0"

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
changelogging = "2.3.0"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "E402",  # module level import not at top of file
]

[tool.pytest.ini_options]
addopts = "--cov wraps"
testpaths = ["tests"]

[tool.coverage.run]
source = ["wraps"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: never",
    "pragma: no cover",
    "if TYPE_CHECKING",
    "@overload",
    "@required",
    "raise NotImplementedError",
    "raise AssertionError",
    "def __repr__",
]

[tool.coverage.html]
directory = "coverage"

[tool.mypy]
strict = true

exclude = ["scripts"]

[tool.changelogging.context]
name = "wraps"
version = "0.13.0"
url = "https://github.com/nekitdev/wraps"

[tool.changelogging.formats]
title = "[{{version}}]({{url}}/tree/v{{version}}) ({{date}})"
fragment = "{{content}} ([#{{id}}]({{url}}/pull/{{id}}))"

[build-system]
requires = ["poetry-core >= 1.9.0"]
build-backend = "poetry.core.masonry.api"
