[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wraps"
version = "0.15.0"
description = "Meaningful and safe wrapping types."
readme = "README.md"
requires-python = ">= 3.8"
license.file = "LICENSE"
keywords = ["python", "future", "either", "option", "result"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "attrs >= 23.2.0",
    "funcs >= 0.10.1",
    "named >= 1.4.2",
    "typing-aliases >= 1.10.1",
    "typing-extensions >= 4.12.2",
]

[[project.authors]]
name = "nekitdev"
email = "nekit@nekit.dev"

[project.urls]
Homepage = "https://github.com/nekitdev/wraps"
Chat = "https://nekit.dev/chat"
Documentation = "https://nekitdev.github.io/wraps"
Funding = "https://nekit.dev/funding"
Issues = "https://github.com/nekitdev/wraps/issues"
Repository = "https://github.com/nekitdev/wraps"

[tool.uv]
dev-dependencies = [
    # checks
    "ruff >= 0.5.7",
    "mypy >= 1.11.0",
    # tests
    "coverage >= 7.6.0",
    "pytest >= 8.3.1",
    "pytest-cov >= 5.0.0",
    "anyio[trio] >= 4.4.0",
    "hypothesis >= 6.111.0",
    # docs
    "mkdocs >= 1.6.0",
    "mkdocs-material >= 9.5.29",
    "mkdocstrings[python] >= 0.25.1",
    # changelogs
    "changelogging >= 2.4.4",
    # scripts
    "entrypoint >= 2.1.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    # module level import not at top of file
    "E402",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
mypy_path = "src"
strict = true
show_error_codes = true

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: never",
    "pragma: no cover",
    "if TYPE_CHECKING",
    "@overload",
    "@required",
    "raise NotImplementedError",
    "raise AssertionError",
    "def __repr__",
]

[tool.coverage.html]
directory = "coverage"

[tool.pytest.ini_options]
addopts = "--cov src"
testpaths = ["tests"]

[tool.changelogging.context]
name = "wraps"
version = "0.15.0"
url = "https://github.com/nekitdev/wraps"

[tool.changelogging.formats]
title = "[{{version}}]({{url}}/tree/v{{version}}) ({{date}})"
fragment = "{{content}} ([#{{id}}]({{url}}/pull/{{id}}))"

[tool.pyright]
venvPath = "."
venv = ".venv"
